create DatafileController class

--- a/DataGenerator/makefile.rules
+++ b/DataGenerator/makefile.rules
@@ -81,11 +81,15 @@ SANITY_SUBSET := $(TEST_TOOL_ROOTS) $(TEST_ROOTS)
 #
 ##############################################################
 
+TOOL_CXXFLAGS += -Iinclude 
+SRCS = $(wildcard src/*.cpp)
+OBJS = $(patsubst src/%.cpp, $(OBJDIR)%$(OBJ_SUFFIX), $(SRCS))
+
 # This section contains the build rules for all binaries that have special build rules.
 # See makefile.default.rules for the default build rules.
-$(OBJDIR)Sources$(OBJ_SUFFIX): $(wildcard src/*.cpp)
-	$(CXX) $(TOOL_CXXFLAGS) $(COMP_OBJ) $@ $^
+$(OBJDIR)%$(OBJ_SUFFIX): src/%.cpp
+	$(CXX) $(TOOL_CXXFLAGS) $(COMP_OBJ)$@ $^
 
 # Build the tool as a shared object.
-$(OBJDIR)DataGenerator$(PINTOOL_SUFFIX): $(OBJDIR)Sources$(OBJ_SUFFIX)
-	$(LINKER) $(TOOL_LDFLAGS_NOOPT) $(LINK_EXE) $@ $^ $(TOOL_LPATHS) $(TOOL_LIBS)
+$(OBJDIR)DataGenerator$(PINTOOL_SUFFIX): $(OBJS)
+	$(LINKER) $(TOOL_LDFLAGS_NOOPT) $(LINK_EXE)$@ $^ $(TOOL_LPATHS) $(TOOL_LIBS)
