update basic config

--- a/basic_config.json
+++ b/basic_config.json
@@ -8,10 +8,10 @@
                 [
                     {
                         "latency" : 2,
-                        "write_policy" : "write_back",
+                        "write_policy" : "WRITE_ALLOCATE",
                         "capacity" : 2048,
                         "block_size" : 64,
-                        "replacement_policy" : "fifo",
+                        "replacement_policy" : "FIFO",
                         "associativity" : 4
                     }
                 ]
@@ -22,10 +22,10 @@
         [
             {
                 "latency" : 2,
-                "write_policy" : "write_back",
+                "write_policy" : "WRITE_ALLOCATE",
                 "capacity" : 2048,
                 "block_size" : 64,
-                "replacement_policy" : "fifo",
+                "replacement_policy" : "FIFO",
                 "associativity" : 4
             }
         ],
