--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(simulator STATIC ${LIB_FILES})
 target_include_directories(simulator PRIVATE include/ include/replacementpolicy/)
 
 # Build unit tests
-set(TEST_FILES test/test.cpp test/test_basiccache.cpp)
+set(TEST_FILES test/test.cpp test/test_api.cpp test/test_basiccache.cpp test/test_core.cpp test/test_firstinfirstout.cpp test/test_lastinfirstout.cpp test/test_system.cpp)
 add_executable(test_simulator ${TEST_FILES})
 target_include_directories(test_simulator PRIVATE ../third_party/ include/ include/replacementpolicy/)
 target_link_libraries(test_simulator simulator)
